Sidebar spacing fix

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -167,7 +167,7 @@ figcaption {
     .content {
         lost-column: 6/12;
         &__inner {
-            padding: 70px 0px;
+            padding: 65px 0px;
         }
     }
 }
@@ -176,7 +176,7 @@ figcaption {
     .content {
         lost-column: 2/5;
         &__inner {
-            padding: 70px 35px;
+            padding: 65px 35px;
         }
     }
 }
