--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -2,8 +2,7 @@
 @import "../../assets/scss/mixins";
 
 .menu {
-    @include margin-bottom(1);
-    @include margin-top(1.5);
+    @include margin(1.5, 1, 1, 0);
     &__list {
         list-style: none;
         padding: 0;
