--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -4,9 +4,7 @@
 .sidebar {
     width: 100%;
     &__inner {
-        position: sticky;
         padding: 25px 20px 0;
-        top: 0;
         bottom: 100%;
     }
     &__author {
@@ -53,10 +51,12 @@
 
 @include breakpoint-md {
     .sidebar {
-        height: 1000vh;
+        height: 100vh;
         lost-column: 1/5;
         &__inner {
+            position: fixed;
             padding: 60px;
+            top: 0;
         }
     }
 }
